tests/valid/data_loaders_only.esm
{
  "esm": "0.6.0",
  "metadata": {
    "name": "DataLoadersOnlyDocument",
    "description": "Loader-only ESM document (RFC pure-io-data-loaders 4.3/4.4, beads ess-v9a.4/ess-v9a.8): a top-level data_loaders block with no models or reaction_systems is a VALID document, satisfying the data_loaders branch of the top-level anyOf. This is the cross-binding positive counterpart to tests/invalid/no_systems.esm (which carries none of the anyOf branches). One pure-I/O grid loader: its native grid is expressed as a GDD Grid (with a crs descriptor) rather than the removed DataLoaderSpatial block, a temporal block marks it time-varying, and variables bind file variables to units; the loader performs no regridding (now a per-variable model concern, RFC 4.1).",
    "authors": [
      "Test Suite"
    ],
    "license": "MIT",
    "tags": [
      "data-loaders",
      "loader-only",
      "pure-io",
      "gdd-grid",
      "conformance",
      "ess-v9a.8"
    ]
  },
  "data_loaders": {
    "weather": {
      "kind": "grid",
      "source": {
        "url_template": "file:///data/weather/{date:%Y%m%d_%H%M}.nc"
      },
      "temporal": {
        "frequency": "PT1H",
        "file_period": "PT1H",
        "records_per_file": 1
      },
      "grid": {
        "family": "cartesian",
        "crs": {
          "projection": "longlat",
          "datum": "WGS84"
        },
        "dimensions": [
          "lon",
          "lat"
        ],
        "extents": {
          "lon": {
            "n": "n_lon",
            "spacing": "uniform"
          },
          "lat": {
            "n": "n_lat",
            "spacing": "uniform"
          }
        },
        "parameters": {
          "n_lon": {
            "description": "lon cell count, resolved from the source dataset at load time"
          },
          "n_lat": {
            "description": "lat cell count, resolved from the source dataset at load time"
          }
        }
      },
      "variables": {
        "temperature": {
          "file_variable": "T2",
          "units": "K",
          "description": "2 m air temperature read from the source dataset"
        }
      }
    }
  }
}
