tests/invalid/data_loader_legacy_spatial.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "LegacySpatialBlockRejected",
    "description": "Test case: a data loader still carrying the legacy 'spatial' block (the former DataLoaderSpatial). The loader's spatial/native-grid description was removed from DataLoader in RFC pure-io-data-loaders 4.1; the native grid is now expressed as a GDD Grid under 'grid' and the loader performs no reprojection or regridding. DataLoader.additionalProperties:false rejects the stale 'spatial' block. Parallel negative to interpolation_method_invalid.esm (the 'regridding' rejection).",
    "authors": [
      "Test Suite"
    ]
  },

  "data_loaders": {
    "BadSpatial": {
      "kind": "grid",
      "source": { "url_template": "file:///data/{date:%Y%m%d}.nc" },
      "variables": {
        "T": { "file_variable": "T", "units": "K" }
      },
      "spatial": { "grid_mapping": "lambert_conformal", "interpolation": "bilinear" }
    }
  },

  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "1", "default": 1.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "*", "args": [-0.1, "x"] }
        }
      ]
    }
  }
}
